test-cases/final-dump/bug228.wybe
def foo(?s:string) {
    ?io = "not a phantom"
    !read(?s)
}

!println(foo)


resource bar:int

def use_bar use ?bar { ?bar = 1 }

?bar = "1.0"
use bar in {
    !use_bar
    !println(bar)
}

!println(bar)
